package com.dutianze.designpattern.prototype;

/**
 * <h2 id="known-uses">Known uses</h2>
 * <ul>
 * <li><a href="http://docs.oracle.com/javase/8/docs/api/java/lang/Object.html#clone%28%29">java.lang.Object#clone()</a></li>
 * </ul>
 *
 * @author dutianze
 * @date 2022/8/9
 */
public interface Prototype {

    Object copy();
}
